[package]
name = "minstrel-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal", "sync", "fs"]}
symphonia = { version = "0.5.3", features = ["all-codecs"]}
opus = "0.3.0"
rubato = "0.14.1"
iced = { version = "0.12.1", features = ["tokio", "debug"] }
